# 2D-Particle_system

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Project_guidelines.md  README.md  resources.rc  run-clang-tidy.sh
imgui/: imgui_widgets.cpp
src/: App.cpp  App.h  Export.cpp  Export.h  ImGuiCustomTheme.h  ParticleEnums.h  ParticleSystem.cpp  ParticleSystem.h  Utility.h  main.cpp
